Migrating to java11